--- a/frontend/static/html/adminpage.html
+++ b/frontend/static/html/adminpage.html
@@ -118,8 +118,8 @@
                     json = xhr.responseText;
 
                     var userlist = JSON.parse(json);
-                    alert (json);
-                    alert (userlist[0].name);
+                   /* alert (json);
+                    alert (userlist[0].name);*/
                     anzahluser=(Object.keys(userlist).length)
 
 
