--- a/frontend/static/html/dataAnalyticsDashboard.html
+++ b/frontend/static/html/dataAnalyticsDashboard.html
@@ -34,7 +34,7 @@
                 </button>
                 <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="40px" height="40px"> </a>
                 <div class="heading">DATA ANALYTICS</div>
-                <button class="btnAdmin1" onclick="locationChange()">All Users</button>
+                <button class="btnAdmin1" onclick="locationChange7 ()">All Users</button>
                 <button class="helpBtn10">Help
                     <span class="helpText">This is your data analytics dashboard. It provides an overview of the average klicks-user.
                     </span>
@@ -197,6 +197,7 @@
                     }]
                 });
         chart.render();
+    }
     };
 //-----------------------------------------------------------------------
     function getshootouttotal() {
@@ -227,9 +228,18 @@
         return Wert;
     }
 
-  function locationChange (){
+
+  function locationChange7 (){
     window.location.replace("http://localhost:8080/page.html");
+}};
+
+
+
+<!--/script>
+function locationChange7 (){
+window.location.replace("http://localhost:8080/page.html");
 }
+<script-->
 
 </script>
 <footer class="footer">
