--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -185,7 +185,7 @@
          "picture": filepath,
          "category": piccategory,
      });
-     alert(request);
+    // alert(request);
      xmlhttp.send( request);
 
  }
