--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -142,7 +142,7 @@
         var userID;
         userID = cookiewerteHolen();
         if (userID === "") {
-            alert('undefined User!');
+         //   alert('undefined User!');
         }
         // cookiewerteHolen();
 
@@ -206,7 +206,7 @@
 
          }
          else { //keine Bilder im Array
-         alert('photos left: ' + ((Object.key(photos).length)))
+      //   alert('photos left: ' + ((Object.key(photos).length)))
               }
          }
 
