--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -183,7 +183,7 @@
                         points.reverse();
                        /* console.log(points);
                         alert(points);*/
-                        alert (Object.keys(points).length);
+                     //   alert (Object.keys(points).length);
                         //alert(points[0].photo.picture);
                         document.getElementById('bestpic').src = points[0].photo.picture;
                         document.getElementById('bestpicpoints').innerText = "Points: "+ points[0].points;
