--- a/frontend/static/html/allphotos.html
+++ b/frontend/static/html/allphotos.html
@@ -108,8 +108,8 @@
                 json = xhr.responseText;
 
                 var photolist = JSON.parse(json);
-                alert (json);
-                alert (photolist[0].name);
+               /* alert (json);
+                alert (photolist[0].name);*/
                 anzahluser=(Object.keys(photolist).length);
 
 
