--- a/frontend/static/html/page.html
+++ b/frontend/static/html/page.html
@@ -122,8 +122,8 @@
                     json = xhr.responseText;
 
                     var userlist = JSON.parse(json);
-                    alert (json);
-                    alert (userlist[0].name);
+                 //   alert (json);
+                  //  alert (userlist[0].name);
                     anzahluser=(Object.keys(userlist).length)
 
 
