--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -201,8 +201,8 @@
             </li>
 
         </ul>
-
-    Your username cannot include:
+</p>
+    <p>Your username cannot include:
 <ul>
 
     <li>
