--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -98,11 +98,17 @@
             <br>
             <input type="submit" value="Create account" onclick="registerUser()" >
             <br><br>
-            <button id="buttonLogin" onclick="showLogin()">Back to login</button>
+            <!--button id="buttonLogin" onclick="showLogin()">Back to login</button>
             <button class="helpRe">Help
                 <span class="helpText"> Please enter the required information and click on the "Create Account" button to register.
                 </span>
+            </button-->
+            <button id="buttonLogin" onclick="showLogin()">Back to login</button>
+            <button class="helpRegis">Help
+                <span class="helpText"> Please enter the required information and click on the "Create Account" button to register.
+                </span>
             </button>
+
         </div>
     </div>
 </div>
