--- a/frontend/static/html/photographerRanking.html
+++ b/frontend/static/html/photographerRanking.html
@@ -159,7 +159,7 @@
             if (xmlhttplog2.readyState == XMLHttpRequest.DONE) {
                 var json = xmlhttplog2.responseText;
                 var userlist = JSON.parse(json);
-                userlist.reverse();
+                //userlist.reverse();
 
 
                 //User1 ------------------------------------------------------------------------
