--- a/frontend/static/html/pictureRanking.html
+++ b/frontend/static/html/pictureRanking.html
@@ -158,7 +158,7 @@
            //     alert('function running');
                 var json = xmlhttplog2.responseText;
                 var piclist = JSON.parse(json);
-                piclist.reverse();
+                //piclist.reverse();
              //   alert(piclist[0].picture);
                 //User1 ------------------------------------------------------------------------
                 document.getElementById('bestpic').src = piclist[0].picture;
