--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -180,7 +180,7 @@
                     if (xmlhttplog2.readyState == XMLHttpRequest.DONE) {
                         var json = xmlhttplog2.responseText;
                         var points = JSON.parse(json);
-                        points.reverse();
+                        //points.reverse();
                        /* console.log(points);
                         alert(points);*/
                      //   alert (Object.keys(points).length);
