--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -208,7 +208,9 @@
     <li>
         Characters from multiple languages.
     </li>
-
+<li>
+    Hate speech, racism or offensive language.
+</li>
 </ul>
 
     </p>
