--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fallstudie</title>
+    <title>Klicks, inc.</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="index.css">
     <script type=text/javascript src = "index.js"></script>
