--- a/frontend/static/html/allphotos.html
+++ b/frontend/static/html/allphotos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AllUsers</title>
+    <title>AllPhotos</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="allusers.css" type="text/css">
     <script type=text/javascript src = "navbarFunction.js"></script>
