rankings, last object in dashboard

--- a/frontend/static/html/adminpage.html
+++ b/frontend/static/html/adminpage.html
@@ -120,7 +120,7 @@
                     var userlist = JSON.parse(json);
                    /* alert (json);
                     alert (userlist[0].name);*/
-                    anzahluser=(Object.keys(userlist).length)
+                    anzahluser=(Object.keys(userlist).length);
 
 
                     for (var i = 0; i < anzahluser; i++) {
