Index Titel verändert

--- a/frontend/static/html/AGB_notregistered.html
+++ b/frontend/static/html/AGB_notregistered.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AGB</title>
+    <title>Terms of Service</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="compare_profile.css">
     <!-- Latest compiled and minified CSS -->
@@ -21,6 +21,24 @@
         p {margin-top: 10px;}
         body {
             padding-bottom: 50px;
+        }
+
+        footer {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        .footer {
+            position: fixed;
+            display: block;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: rgb(15, 10, 10);
+            text-align: center;
+            color: lightgray;
+            height: 25px;
+            z-index: 10;
         }
     </style>
 
@@ -266,6 +284,8 @@
     and you may not make any representations on behalf of or bind klicks in any manner.
 </div>
 
-
+<footer class="footer">
+    <p>Klicks Inc. © 2018</p>
+</footer>
 </body>
 </html>
