--- a/frontend/static/html/AGB.html
+++ b/frontend/static/html/AGB.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>AGB</title>
+        <title>Terms and Conditions</title>
         <link rel="icon" href="./images/Herzbeben_Logo.png">
         <link rel="stylesheet" href="compare_profile.css">
       <!-- Latest compiled and minified CSS -->
@@ -59,7 +59,7 @@
                     <button type="submit" class="btn btn-default">Submit</button> -->
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="impressum.html">Impressum</a></li>
+                    <li><a href="impressum.html">About Us</a></li>
                     <li><a href="compare.html">Compare Pictures</a></li>
                     <li><a href="leaderboards.html">Leaderboards</a></li>
                     <!--a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
