--- a/frontend/static/html/AGB_notregistered.html
+++ b/frontend/static/html/AGB_notregistered.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Terms of Service</title>
+    <title>Terms and Conditions</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
     <link rel="stylesheet" href="compare_profile.css">
     <!-- Latest compiled and minified CSS -->
