--- a/frontend/static/html/allphotos.html
+++ b/frontend/static/html/allphotos.html
@@ -42,7 +42,7 @@
                     <button type="submit" class="btn btn-default">Submit</button> -->
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="impressum.html">Impressum</a></li>
+                    <li><a href="impressum.html">About Us</a></li>
                     <li><a href="compare.html">Compare Pictures</a></li>
                     <li><a href="leaderboards.html">Leaderboards</a></li>
                     <!--a onclick="dropdownMenu()" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leaderboards <span class="caret"></span></a>
