--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -40,7 +40,7 @@
                     <button type="button" class="btn btn-default" id="UserSearchbtn" onclick="locationChange()">Search for Users</button>
                  </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="impressum.html">Impressum</a></li>
+                    <li><a href="impressum.html">About Us</a></li>
                     <li><a href="compare.html">Compare Pictures</a></li>
                     <li><a href="leaderboards.html">Leaderboards</a></li>
                     <li><a href="profile.html">Profile</a></li>
