--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -54,7 +54,7 @@
               <button type="submit" class="btn btn-default">Submit</button> -->
           </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="impressum.html">Impressum</a></li>
+                <li><a href="impressum.html">About Us</a></li>
                 <li><a href="compare.html">Compare Pictures</a></li>
                 <li><a href="leaderboards.html">Leaderboards</a></li>
                 <li><a href="profile.html">Profile</a></li>
